ood theme: fix profile text on mobile d8-2507

--- a/web/themes/custom/ood/css/style.css
+++ b/web/themes/custom/ood/css/style.css
@@ -691,3 +691,11 @@ form #tag-suggestions strong {
   }
 }
 
+@media screen and (max-width: 991.98px) {
+  .open-ondemand #secondaryNavbarResponsive a.dropdown-toggle {
+    font-size: 0.8rem !important;
+    color: #000 !important;
+    border-bottom: none !important;
+  }
+}
+
